service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-svc
  namespace: default
spec:
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 8080
